<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResetPassword">

    <LinearLayout
        android:id="@+id/reset_password_layout"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/resetpasswordbg"
                android:scaleType="centerCrop"/>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">



                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:orientation="horizontal">



                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_gravity="left"
                        android:gravity="left">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitStart"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_chevron_left_black_24dp"
                            android:tint="@color/theme_yellow"
                            android:padding="10dp"></ImageView>


                        <TextView
                            android:id="@+id/password_reset_back_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/back_btn"
                            android:textSize="16dp"
                            android:textColor="@color/theme_yellow"
                            android:layout_gravity="center"></TextView>


                    </LinearLayout>







                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:paddingTop="25dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pt_serif_bold"
                android:text="@string/passoerd_reset_tv"
                android:textColor="@color/theme_black"
                android:textSize="28dp">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/default_text"></TextView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    android:background="@color/transparent"
                    app:boxBackgroundColor="@color/transparent"
                    android:hint="@string/new_password_et">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_reset_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/pt_serif" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent"
                    app:boxBackgroundColor="@color/transparent"
                    android:hint="@string/re_password_et_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_reset_re_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/pt_serif" />

                </com.google.android.material.textfield.TextInputLayout>







                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/password_reset_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:elevation="2dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="@color/theme_yellow"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/pt_serif"
                        android:gravity="center"
                        android:text="@string/reset_password_btn"
                        android:textColor="#fff"></TextView>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/password_reset_tv_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textColor="@color/alert_colour"
                    android:layout_gravity="center">

                </TextView>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="10dp">

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</FrameLayout>