<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_card"
        android:layout_width="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:clickable="true"
        app:cardElevation="2dp"
        android:elevation="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:elevation="2dp"
                    android:layout_margin="2dp"
                    app:cardCornerRadius="8dp">
                    <ImageView
                        android:id="@+id/menu_item_img"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/cookbook"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:padding="4dp" />


                </com.google.android.material.card.MaterialCardView>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/menu_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/single_customer_image"
                        android:fontFamily="@font/pt_serif_bold"
                        android:text="@string/name_tv"
                        android:textColor="@color/theme_black"
                        android:textSize="15dp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/menu_tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/pt_serif"
                        android:text="@string/description_tv"
                        android:maxLength="25"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/theme_black"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/menu_tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/pt_serif"
                        android:text="@string/date_tv"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/theme_black"
                        android:textSize="12dp" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="36dp"
                    android:padding="2dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cookbook_btn_add_like"
                        android:padding="2dp"
                        android:layout_width="30dp"
                        android:layout_gravity="center"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_heart"
                        android:tint="@color/alert_colour">
                    </ImageView>


                    <TextView
                        android:id="@+id/menu_tv_like_count"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="275"></TextView>


                </LinearLayout>





            </LinearLayout>



        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>