<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity"
    android:orientation="vertical">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">



        <ImageView
            android:id="@+id/BlurImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/verifybg"
            android:scaleType="centerCrop"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">



            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:orientation="horizontal">



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_gravity="left"
                    android:gravity="left">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitStart"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_chevron_left_black_24dp"
                        android:tint="@color/theme_yellow"
                        android:padding="10dp"></ImageView>


                    <TextView
                        android:id="@+id/verify_tv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back_btn"
                        android:textSize="16dp"
                        android:textColor="@color/theme_yellow"
                        android:layout_gravity="center"></TextView>


                </LinearLayout>







            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_serif_bold"
            android:text="Please fill here Using \nYour Code?"
            android:textColor="@color/theme_black"
            android:textSize="28dp">

        </TextView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/transparent"
                    app:boxBackgroundColor="@color/transparent"
                    android:hint="@string/verification_et_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/verify_et_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/pt_serif"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/verify_btn_verify"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="2dp"
                    android:elevation="2dp"
                    app:cardElevation="5dp"
                    android:backgroundTint="@color/theme_yellow"
                    app:cardCornerRadius="25dp">

                    <TextView
                        android:id="@+id/forgetpass_tv_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/pt_serif"
                        android:gravity="center"
                        android:text="@string/Verify_btn"
                        android:textColor="#fff"></TextView>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/verify_tv_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@color/alert_colour"
                    android:layout_gravity="center">

                </TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="10dp">

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</LinearLayout>